force-app/main/default/objects/KimbleOne__AccountInvoicingModel__c/KimbleOne__AccountInvoicingModel__c.object-meta.xml
<CustomObject>
    <label>Account Invoicing Model</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Account Invoicing Model Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Invoicing Models</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>