force-app/main/default/objects/KimbleOne__AccountInvoicingModel__c/fields/KimbleOne__Account__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Invoicing Models</relationshipLabel>
    <relationshipName>AccountInvoicingModels</relationshipName>
    <type>Lookup</type>
</CustomField>