force-app/main/default/objects/KimbleOne__AccountInvoicingModel__c/fields/KimbleOne__AllowPartItemInvoicing__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__AllowPartItemInvoicing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Part Item Invoicing</label>
    <type>Checkbox</type>
</CustomField>