force-app/main/default/objects/KimbleOne__AccountInvoicingModel__c/fields/KimbleOne__InvoiceFormat__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceFormat__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Format</label>
    <referenceTo>KimbleOne__InvoiceFormat__c</referenceTo>
    <relationshipLabel>Account Invoicing Models</relationshipLabel>
    <relationshipName>AccountInvoicingModels</relationshipName>
    <type>Lookup</type>
</CustomField>