force-app/main/default/objects/KimbleOne__AccountInvoicingModel__c/fields/KimbleOne__InvoiceMatchingTolerancePct__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceMatchingTolerancePct__c</fullName>
    <label>Invoice Matching Tolerance Pct</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>