force-app/main/default/objects/KimbleOne__AccountInvoicingModel__c/fields/KimbleOne__InvoicePaymentTermDays__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoicePaymentTermDays__c</fullName>
    <defaultValue>30</defaultValue>
    <description>The number of days before the invoice must be paid.</description>
    <label>Invoice Payment Term Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>