force-app/main/default/objects/KimbleOne__AccountInvoicingModel__c/fields/KimbleOne__InvoiceTemplate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__InvoiceTemplate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Template</label>
    <referenceTo>KimbleOne__CommercialDocumentTemplate__c</referenceTo>
    <relationshipLabel>Account Invoicing Models</relationshipLabel>
    <relationshipName>AccountInvoicingModels</relationshipName>
    <type>Lookup</type>
</CustomField>