force-app/main/default/objects/KimbleOne__AccountInvoicingModel__c/fields/KimbleOne__Locale__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__Locale__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Locale</label>
    <referenceTo>KimbleOne__Locale__c</referenceTo>
    <relationshipLabel>Account Invoicing Models</relationshipLabel>
    <relationshipName>AccountInvoicingModels</relationshipName>
    <type>Lookup</type>
</CustomField>