force-app/main/default/objects/KimbleOne__AccountInvoicingModel__c/fields/KimbleOne__TaxCodeReference__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__TaxCodeReference__c</fullName>
    <label>Tax Code Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>